--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ var et_core_api_spam_recaptcha = {"site_key":"","page_action":{"action":"live_de
 <div class="et_pb_fullwidth_header_container left">
 <div class="header-content-container center">
 <div class="header-content">
-<h1 class="et_pb_module_header">Create with BUDDY</h1>
+<h1 class="et_pb_module_header">Create with BUDDYS</h1>
 <div class="et_pb_header_content_wrapper"><p>Our Aim is your big smile when your imagination comes to the screen while assuring you the best quality service at the minimum cost.
 Come and Create with BUDDY and give your thoughts a home screen.</p><p><b>Because Unbeleivable Dedication Deserves You</b></p>
 <p>&nbsp;</p></div>
